# jl-pretty

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  line_processor.rs  main.rs  session.rs  session_detector.rs
src/lib/: ansi.rs  lib.rs  line_processor.rs  logline.rs
src/test-data/: log-with-invalid-lines.jsonl
test-data/: README.md
