[package]
name = "jl-pretty"
description = "Read JSON log lines and pretty-prints them to std out"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
parse-size = "1.1.0"
regex = "1.11.1"
serde = "1.0.219"
sonic-rs = "0.5.0"
thiserror = "2.0.12"

[[bin]]
name = "gen-test-data"
path = "src/bin/gen-test-data/main.rs"

[lib]
name = "pretty"
path = "src/lib/lib.rs"
